Added bookmark feature

--- a/Mikrostepper/mikrostepper.qrc
+++ b/Mikrostepper/mikrostepper.qrc
@@ -69,5 +69,6 @@
         <file>Images/SaveCalibration.png</file>
         <file>Images/ArrowSmall.png</file>
         <file>Images/ArrowLSmall.png</file>
+        <file>BookmarkMenu.qml</file>
     </qresource>
 </RCC>
