New ToupCamera deemed done!
- Big addition to camera properties
- Several fixes for widgets
- And many more. . .

--- a/Mikrostepper/mikrostepper.qrc
+++ b/Mikrostepper/mikrostepper.qrc
@@ -70,5 +70,6 @@
         <file>Images/ArrowSmall.png</file>
         <file>Images/ArrowLSmall.png</file>
         <file>BookmarkMenu.qml</file>
+        <file>KeySlider.qml</file>
     </qresource>
 </RCC>
