Added changes from Optilab

--- a/Mikrostepper/mikrostepper.qrc
+++ b/Mikrostepper/mikrostepper.qrc
@@ -71,5 +71,9 @@
         <file>Images/ArrowLSmall.png</file>
         <file>BookmarkMenu.qml</file>
         <file>KeySlider.qml</file>
+        <file>Images/HideRibbon.png</file>
+        <file>Images/HideRibbon-hover.png</file>
+        <file>Images/ShowRibbon.png</file>
+        <file>Images/ShowRibbon-hover.png</file>
     </qresource>
 </RCC>
